# llm-zoomcamp-2026-code

./: .gitignore  new_search.ipynb  notebook.ipynb  persinsent_rag.ipynb  pyproject.toml  rag.ipynb  rag_helper.py
01-intro/: new_search.ipynb
02-vector-search/: rag.ipynb  vector-search pg-vector.ipynb  vector_search.ipynb
02-vector-search/llm-zoomcamp-onnx/: .gitignore  pyproject.toml
02-vector-search/llm-zoomcamp-onnx/.ipynb_checkpoints/: onnx-embedder-checkpoint.ipynb
03-agents/: agents.ipynb  rag_helper.py
homework/01-agentic-rag/: homework.ipynb  rag_helper.py
homework/02-vector-search/: homework2.ipynb
