[project]
name = "llm-zoomcamp-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gitsource>=0.0.5",
    "minsearch>=0.0.11",
    "numpy>=2.4.6",
    "onnxruntime>=1.26.0",
    "openai>=2.37.0",
    "tokenizers>=0.23.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.15.0",
    "jupyter>=1.1.1",
]
